# qt_opencv_demo

./: .gitignore  CMakeLists.txt  README.md  WSL 下 GUI 程序标题栏中文问题解决方案.md  conanfile.txt  fix_problem.md  wsl中连接宿主机摄像头设备.md  人脸检测功能说明.md
example/ch01/: eg1.cpp  eg2.cpp  eg3.cpp  eg4.cpp  eg5.cpp  eg6.cpp  eg7.cpp  基础操作.md
include/: facedetector.h  imageprocessor.h  mainwindow.h  videoplayer.h  videowidget.h
src/: facedetector.cpp  imageprocessor.cpp  main.cpp  mainwindow.cpp  videoplayer.cpp  videowidget.cpp
uml/src/: flowchart.md
